# auth-service

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  seed.json  tree.txt
auth_service/: authentication.py  mixins.py  models.py  permissions.py  urls.py
auth_service/api/v1/: serializers.py  urls.py  views.py
auth_service/migrations/: 0001_initial.py
config/: settings.py  urls.py
